--- a/ACC/appsettings.json
+++ b/ACC/appsettings.json
@@ -13,7 +13,7 @@
     // "DefaultConnection": "Server=.;Database=CDE2;Integrated Security=True;Encrypt=False;" // Nasr
     //"DefaultConnection": "Server=DESKTOP-G6U036E\\SQLEXPRESS;Database=ACC223;Integrated Security=True;Encrypt=False;", // gaber
 
-         "DefaultConnection": "Server=.;Database=CDE;Integrated Security=True;Encrypt=False;" // Nasr
+         //"DefaultConnection": "Server=.;Database=CDE;Integrated Security=True;Encrypt=False;" // Nasr
         //"DefaultConnection": "Server=DESKTOP-G6U036E\\SQLEXPRESS;Database=Training_Center;Integrated Security=True;Encrypt=False;", // gaber
 
     "DefaultConnection": "Server=.;Database=ACC222;Integrated Security=True;Encrypt=False;" // Ibrahim
