--- a/ACC/appsettings.json
+++ b/ACC/appsettings.json
@@ -10,14 +10,14 @@
 
     //"DefaultConnection": "server=DESKTOP-O0QCD23\\SQLDEVELOPER;Database=ACC_MVC23332;TrustServerCertificate=true;trusted_connection=true" // Ismael
     // "DefaultConnection": "server=DESKTOP-O0QCD23\\SQLDEVELOPER;Database=ACC_MVC111;TrustServerCertificate=true;trusted_connection=true" // Ismael
-     "DefaultConnection": "Server=.;Database=ibra;Integrated Security=True;Encrypt=False;" // Nasr
+     //"DefaultConnection": "Server=.;Database=ibra;Integrated Security=True;Encrypt=False;" // Nasr
     //"DefaultConnection": "Server=DESKTOP-G6U036E\\SQLEXPRESS;Database=ACC223;Integrated Security=True;Encrypt=False;", // gaber
 
          //"DefaultConnection": "Server=.;Database=CDE;Integrated Security=True;Encrypt=False;" // Nasr
         //"DefaultConnection": "Server=DESKTOP-G6U036E\\SQLEXPRESS;Database=Training_Center;Integrated Security=True;Encrypt=False;", // gaber
 
     //"DefaultConnection": "Server=.;Database=ACC22222;Integrated Security=True;Encrypt=False;" // Ibrahim
-    //"DefaultConnection": "server=HAMED\\SQLEXPRESS;Database=ACC_MVC;TrustServerCertificate=true;trusted_connection=true" // Hamed
+    "DefaultConnection": "server=HAMED\\SQLEXPRESS;Database=ACC_MVC14;TrustServerCertificate=true;trusted_connection=true" // Hamed
 
 
   }
