--- a/ACC/ACC.csproj
+++ b/ACC/ACC.csproj
@@ -36,8 +36,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="wwwroot\css\" />
-		<Folder Include="wwwroot\images\" />
+		<Folder Include="wwwroot\Images\" />
 		<Folder Include="wwwroot\js\" />
 		<Folder Include="wwwroot\lib\bootstrap\" />
 		<Folder Include="wwwroot\lib\bootstrap\dist\js\" />
