--- a/ACC/appsettings.json
+++ b/ACC/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=DESKTOP-O0QCD23\\SQLDEVELOPER;Database=ACC_MVC11111;TrustServerCertificate=true;trusted_connection=true" // Ismael
-     //"DefaultConnection": "Server=.;Database=CDEMaster;Integrated Security=True;Encrypt=False;" // Nasr
+    //"DefaultConnection": "server=DESKTOP-O0QCD23\\SQLDEVELOPER;Database=ACC_MVC11111;TrustServerCertificate=true;trusted_connection=true" // Ismael
+     "DefaultConnection": "Server=.;Database=CDEMaster;Integrated Security=True;Encrypt=False;" // Nasr
     //"DefaultConnection": "Server=DESKTOP-G6U036E\\SQLEXPRESS;Database=ACC223;Integrated Security=True;Encrypt=False;", // gaber
     //"DefaultConnection": "Server=.;Database=ACC22222;Integrated Security=True;Encrypt=False;" // Ibrahim
     //"DefaultConnection": "server=HAMED\\SQLEXPRESS;Database=ACC_MVC14;TrustServerCertificate=true;trusted_connection=true" // Hamed
